Project/mysql/networking/allow-traffic-namespace.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
   name: allow-from-ns
spec:
  podSelector:
      matchLabels:
         app: mysql
  ingress:
    - from:
        - namespaceSelector:
             matchLabels:
                 env: dev
                 env: uat
