Project/mysql/networking/deny-all-ingress.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
   name: deny-all-ingress
spec:
  podSelector:
     matchLabels:
        app: mysql
  ingress: []
